--- a/Apply.html
+++ b/Apply.html
@@ -200,11 +200,7 @@
                           </select>
                         </div>
                      </div>
-
-                     <div class="inputfield">
-                      <input type="text" class="input" name="College of interest:" placeholder="College of interest:" required>
-                    </div>
-
+                     
                     <div class="inputfield">
                       <label>Programme of interest:</label>
                       <div class="custom_select" name="Programme of interest:" type="text">
@@ -220,40 +216,22 @@
 
                     <div class="inputfield">
                       <label>Course of interest (option 1)</label>
-                      <div class="custom_select" name="Course of interest (option 1):" type="text">
-                        <select name="Course of interest (option 1)" type="text" required>
-                          <option name="Course of interest (option 1)" type="text" value="">Select</option>
-                          <option name="Programme of interest:" type="text" value="Certificate"> Certificate </option>
-                          <option name="Programme of interest:" type="text" value="Diploma"> Diploma </option>
-                          <option name="Programme of interest:" type="text" value="Undergraduate"> Undergraduate </option>
-                          <option name="Programme of interest:" type="text" value="Postgraduate"> Postgraduate </option>
-                        </select>
+                      <div class="inputfield">
+                        <input type="text" class="input" name="Course of interest (option 1)" placeholder="Course of interest (option 1)" required>
                       </div>
                     </div>
 
                     <div class="inputfield">
                       <label>Course of interest (option 2)</label>
-                      <div class="custom_select" name="Course of interest (option 2)" type="text">
-                        <select name="Course of interest (option 2)" type="text" required>
-                          <option name="Course of interest (option 2)" type="text" value="">Select</option>
-                          <option name="Programme of interest:" type="text" value="Certificate"> Certificate </option>
-                          <option name="Programme of interest:" type="text" value="Diploma"> Diploma </option>
-                          <option name="Programme of interest:" type="text" value="Undergraduate"> Undergraduate </option>
-                          <option name="Programme of interest:" type="text" value="Postgraduate"> Postgraduate </option>
-                        </select>
+                      <div class="inputfield">
+                        <input type="text" class="input" name="Course of interest (option 2)" placeholder="Course of interest (option 2)" required>
                       </div>
                     </div>
 
                     <div class="inputfield">
                       <label>Course of interest (option 3)</label>
-                      <div class="custom_select" name="Course of interest (option 3)" type="text">
-                        <select name="Course of interest (option 3)" type="text" required>
-                          <option name="Course of interest (option 3)" type="text" value="">Select</option>
-                          <option name="Course of interest (option 3)" type="text" value="Certificate"> Certificate </option>
-                          <option name="Programme of interest:" type="text" value="Diploma"> Diploma </option>
-                          <option name="Programme of interest:" type="text" value="Undergraduate"> Undergraduate </option>
-                          <option name="Programme of interest:" type="text" value="Postgraduate"> Postgraduate </option>
-                        </select>
+                      <div class="inputfield">
+                        <input type="text" class="input" name="Course of interest (option 3)" placeholder="Course of interest (option 3)" required>
                       </div>
                     </div>
 
@@ -273,7 +251,7 @@
                   </div>
 
                     
-                    <label> Upload of Documents: </label>
+                    <label> Upload of Documents: (Leave uploads blank to what doesn't apply to you)</label>
                     <div class="inputfield">
                       <label> G12 Results </label>
                       <input type="file" class="input" name="G12 Results" placeholder="G12 Results">
