--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -56,15 +56,15 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link> Home </a>
+            <a href="./index.html#home" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link> About Us </a>
+            <a href="./index.html#about" class="navbar-link" data-nav-link> About Us </a>
           </li>
 
           <li>
-            <a href="#features" class="navbar-link" data-nav-link> Features </a>
+            <a href="./index.html#features" class="navbar-link" data-nav-link> Features </a>
           </li>
 
           <li>
@@ -72,11 +72,11 @@
           </li>
 
           <li>
-            <a href="#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
+            <a href="./index.html#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
           </li>
 
           <li>
-            <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
+            <a href="./index.html#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
           <li>
@@ -156,21 +156,6 @@
             <div class="right">
               <h2>Contact Us</h2>
               <form  action="" method="POST">
-                <div class="field">
-                  <label> Reason for Contact </label>
-                  <div class="field" name="Reason for Contact" type="text">
-                    <select name="Title" type="text">
-                      <option name="Title" type="text" value="">Select</option>
-                      <option name="Title" type="text" value="Ms"> Ms </option>
-                      <option name="Title" type="text" value="Miss"> Miss </option>
-                      <option name="Title" type="text" value="Mrs"> Mrs </option>
-                      <option name="Title" type="text" value="Mr"> Mr </option>
-                      <option name="Title" type="text" value="Dr"> Dr </option>
-                      <option name="Title" type="text" value="Prof"> Prof </option>
-                      <option name="Title" type="text" value="Rev"> Rev </option>
-                    </select>
-                  </div>
-               </div>
                 <input name="Name" type="text" class="field" placeholder="Your Name">
                 <input name="Email Address" type="email" class="field" placeholder="Your Email">
                 <input name="Phone Number" type="text" class="field" placeholder="Your Phone">
