--- a/Courses.html
+++ b/Courses.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Wensi Recruitment Agency | Home </title>
+  <title> Wensi Recruitment Agency | Courses </title>
 
   <!-- 
     - favicon
@@ -56,27 +56,27 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link> Home </a>
+            <a href="./index.html#home" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link> About Us </a>
+            <a href="./index.html#about" class="navbar-link" data-nav-link> About Us </a>
           </li>
 
           <li>
-            <a href="#features" class="navbar-link" data-nav-link> Features </a>
+            <a href="./index.html#features" class="navbar-link" data-nav-link> Features </a>
           </li>
 
           <li>
-            <a href="./Courses.html" class="navbar-link" data-nav-link> Courses </a>
+            <a href="#courses" class="navbar-link" data-nav-link> Courses </a>
           </li>
 
           <li>
-            <a href="#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
+            <a href="./index.html#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
           </li>
 
           <li>
-            <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
+            <a href="./index.html#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
           <li>
@@ -84,7 +84,7 @@
           </li>
 
           <li>
-            <a href="./Apply.html" class="navbar-link" data-nav-link> Apply Now </a>
+            <a href="./Apply.html#Apply" class="navbar-link" data-nav-link> Apply Now </a>
           </li>
 
         </ul>
@@ -95,7 +95,7 @@
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
       </button>
 
-      <a href="./Apply.html" class="btn-outline"> Apply Now </a>
+      <a href="./Apply.html#Apply" class="btn-outline"> Apply Now </a>
 
       <div class="overlay" data-nav-toggler data-overlay></div>
 
@@ -108,34 +108,45 @@
       <!-- 
         - #COURSES
       -->
-      <section class="section service" id="services" aria-label="service">
+      <section class="section service" id="courses" aria-label="service">
         <div class="container">
 
-          <p class="section-subtitle text-center">-What We Offer-</p>
+          <p class="section-subtitle text-center">-What is Offered-</p>
 
-          <h2 class="h2 section-title text-center">Our Creative Services</h2>
-
-          <p class="section-text text-center">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus deserunt distinctio corporis adipisci nihil in facere libero eum quidem magnam!
-          </p>
+          <h2 class="h2 section-title text-center"> All the Courses </h2>
 
           <ul class="grid-list">
 
             <li>
               <div class="service-card has-after">
 
-                <figure class="card-icon">
-                  <img src="./assets/images/service-1.png" width="140" height="140" loading="lazy"
-                    alt="" class="img">
-                </figure>
-
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
+                  <h3 class="h3 card-title"> ENGINEERING & TECHNOLOGY </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
+                    -> B. Tech - Computer Science Engineering: Cyber & Forensics and Artifical Intelligence with Data Sciences
+                    <br>
+                    <br>
+                    -> B. Tech - Mechanical Engineering: Automobile Engineering, Robotics and Automation Engineering
+                    <br>
+                    <br>
+                    -> B. Tech - Civil Engineering
+                    <br>
+                    <br>
+                    -> B.Tech - Electronics & Communication Engineering
+                    <br>
+                    <br>
+                    -> B.Tech - Auto Mobile Specialization in Electronic Vehicle
+                    <br>
+                    <br>
+                    -> M.Tech (Full Time): Computer Science Engineering(CSE)
+                    <br>
+                    <br>
+                    -> M.Tech (Full Time): Mechanical Engineering(ME)
+                    <br>
+                    <br>
+                    -> M.Tech (Full Time): Electronics & communication Engineering (ECE)
                   </p>
 
                 </div>
@@ -146,18 +157,36 @@
             <li>
               <div class="service-card has-after">
 
-                <figure class="card-icon">
-                  <img src="./assets/images/service-2.png" width="140" height="140" loading="lazy" alt=""
-                    class="img">
-                </figure>
-
                 <div class="card-content">
 
-                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
+                  <h3 class="h3 card-title"> COMPUTER APPLICATIONS & INFORMATION TECHNOLOGY </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
+                    -> B.Sc. Computer Science
+                    <br>
+                    <br>
+                    -> Bachelor in Computer Application (BCA)
+                    <br>
+                    <br>
+                    -> BCA Lateral Entry
+                    <br>
+                    <br>
+                    -> BCA (Hons.): Cyber and Forensics and Artificial Intelligence & Data Science
+                    <br>
+                    <br>
+                    -> BCA (Hons.) Cyber Security (Lateral Entry)
+                    <br>
+                    <br>
+                    -> Master in Computer Application (MCA)
+                    <br>
+                    <br>
+                    -> Master in Computer Application (Lateral Entry)
+                    <br>
+                    <br>
+                    -> MCA (Hons.) Cyber Security (Lateral Entry)
+                    <br>
+                    <br>
+                    -> PGDCA
                   </p>
 
                 </div>
@@ -168,18 +197,24 @@
             <li>
               <div class="service-card has-after">
 
-                <figure class="card-icon">
-                  <img src="./assets/images/service-3.png" width="140" height="140" loading="lazy"
-                    alt="" class="img">
-                </figure>
-
                 <div class="card-content">
 
-                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
+                  <h3 class="h3 card-title"> AGRICULTURE & NATURAL SCIENCES </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
+                    -> B.Sc. (Hons.) Agriculture
+                    <br>
+                    <br>
+                    -> B.Sc. (Hons.) (Mathematics/Zoology Physics/Chemistry)
+                    <br>
+                    <br>
+                    -> M.Sc. Agriculture
+                    <br>
+                    <br>
+                    -> M.Sc. (Botany /Zoology Physics/Chemistry)
+                    <br>
+                    <br>
+                    -> M.Sc. Mathematics
                   </p>
 
                 </div>
@@ -190,18 +225,299 @@
             <li>
               <div class="service-card has-after">
 
-                <figure class="card-icon">
-                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
-                    class="img">
-                </figure>
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> MANAGEMENT STUDIES </h3>
+
+                  <p class="card-text">
+                    Bachelor of Business Administration (BBA)
+                    <br>
+                    <br>
+                    BBA in Business Analytics
+                    <br>
+                    <br>
+                    Bachelor of Commerce (B.Com.)
+                    <br>
+                    <br>
+                    B.Com. (Hons.)
+                    <br>
+                    <br>
+                    MBA
+                    <br>
+                    <br>
+                    MBA in Artificial Intelligence for Managers
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
+                  <h3 class="h3 card-title"> HOTEL MANAGEMENT, AIRLINE & TOURISM </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
+                    -> B.Sc AAM (Airline & Airport Management)
+                    <br>
+                    <br>
+                    -> B.Sc AAM (Airline & Airport Management) Lateral Entry
+                    <br>
+                    <br>
+                    -> Bachelors of Hotel Mgt & Catering Technology (BHM&CT)
+                    <br>
+                    <br>
+                    -> Bachelors of Hotel Mgt. & Catering Technology (BHM&CT) Lateral Entry
+                    <br>
+                    <br>
+                    -> M.Sc Tourism & Hospitality
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> LAW </h3>
+
+                  <p class="card-text">
+                    -> BA LLB
+                    <br>
+                    <br>
+                    -> B.COM LLB
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> EDUCATION, PHYSICAL EDUCATION & SPORTS SCIENCE </h3>
+
+                  <p class="card-text">
+                    -> Bachelor of Arts (BA)
+                    <br>
+                    <br>
+                    -> Bachelor of Arts BA (Hons): Sociology, Psychology, English, Political Science, Economics
+                    <br>
+                    <br>
+                    -> Bachelors in Physical Education & Sports Sciences (BPESS)
+                    <br>
+                    <br>
+                    -> Bachelors in Journalism & Mass Communication
+                    <br>
+                    <br>
+                    -> B.Sc (Hons) Economics
+                    <br>
+                    <br>
+                    -> MSW Master in Social Work
+                    <br>
+                    <br>
+                    -> MA in English, Psychology, Political Science Sociology and Economics
+                    <br>
+                    <br>
+                    -> MA in Public Administration
+                    <br>
+                    <br>
+                    -> M.Sc. Economics
+                    <br>
+                    <br>
+                    -> PG Diploma in Yoga Education
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> PHARMACEUTICAL & ALLIED MEDICAL SCIENCES </h3>
+
+                  <p class="card-text">
+                    -> B.Pharmacy
+                    <br>
+                    <br>
+                    -> B.Pharmacy-LEET
+                    <br>
+                    <br>
+                    -> B.Sc. (Medical Laboratory Technology)
+                    <br>
+                    <br>
+                    -> B.Sc. MLT-LEET
+                    <br>
+                    <br>
+                    -> B.Sc Operation Theatre Technology/LEET
+                    <br>
+                    <br>
+                    -> B.Sc Radiology and Imaging Technology Bachelor of Physiotherapy (BPT)
+                    <br>
+                    <br>
+                    -> B.Sc. Optometry/LEET
+                    <br>
+                    <br>
+                    -> B.Sc. Anesthesia/LEET
+                    <br>
+                    <br>
+                    -> B.Sc in Dialysis Therapy Technology
+                    <br>
+                    <br>
+                    -> B.Sc in Cardiac Care Technology
+                    <br>
+                    <br>
+                    -> Bachelor in Public Health (BPH)
+                    <br>
+                    <br>
+                    -> Bachelor in Hospital Administration (BHA)
+                    <br>
+                    <br>
+                    -> M.Pharm (Pharmaceutics/ Pharmacology/ Pharmaceutical Analysis)
+                    <br>
+                    <br>
+                    -> M.Sc Radiology & Imaging Technology
+                    <br>
+                    <br>
+                    -> MHA (Master in Hospital Administration)
+                    <br>
+                    <br>
+                    -> M. Sc Microbiology
+                    <br>
+                    <br>
+                    -> M.Sc Medical Laboratory Technology
+                    <br>
+                    <br>
+                    -> M.Optometry
+                    <br>
+                    <br>
+                    -> M.Sc. Anesthesia
+                    <br>
+                    <br>
+                    -> M.Sc. Operation Theatre Technology
+                    <br>
+                    <br>
+                    -> Master in Public Health (MPH)
+                    <br>
+                    <br>
+                    -> Master in Hospital Administration (MHA)
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> DESIGN & INNOVATION </h3>
+
+                  <p class="card-text">
+                    -> B.Sc. Design- Fashion/Multimedia & Animation
+                    <br>
+                    <br>
+                    -> B.Design (Interior/Fashion/ Multimedia & Animation)
+                    <br>
+                    <br>
+                    -> Bachelor in Fine Arts (BFA)
+                    <br>
+                    <br>                    
+                    -> M.Sc. (Design-Fashion)
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> DIPLOMA AFTER 10TH PROGRAMMES </h3>
+
+                  <p class="card-text">
+                    -> Diploma in Engineering (Computer Science. Mechanical & CIVIL)
+                    <br>
+                    <br>                    
+                    -> Diploma in Engineering LEET (Computer Science, Mechanical & CIVIL)
+                    <br>
+                    <br>
+                    -> Diploma in Medical Laboratory Technology (DMLT)
+                    <br>
+                    <br>
+                    -> Diploma in Business Administration (DBA)
+                    <br>
+                    <br>
+                    -> Diploma in Multimedia
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> ADVANCE DIPLOMA PROGRAMMES AFTER 10+2 </h3>
+
+                  <p class="card-text">
+                    -> Advance Diploma in Finance & Accounting
+                    <br>
+                    <br>
+                    -> Advance Diploma in Healthcare Science
+                    <br>
+                    <br>
+                    -> Advance Diploma in Business Administration
+                    <br>
+                    <br>
+                    -> Advance Diploma in Computer Application
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> DIPLOMA AFTER 10+2 </h3>
+
+                  <p class="card-text">
+                    -> Diploma In Allied Medical Sciences:
+                    - Pharmacy
+                    - Medical Laboratory Technology/ Anasthesia/ Operation Theater Technology/ Medical Radiology Technology
+                    <br>
+                    <br>
+                    -> Diploma in Food Production/Airline Cabin Crew/Hospitality/ Hotel Management
+                    <br>
+                    <br>
+                    -> Diploma in Law:
+                    Human Rights/ Business Laws & Corporate Laws/ Cyber Laws/ Labour Laws/ Labour Welfare/ Arbitration, Conciliation & after Dispute Resolition System
                   </p>
 
                 </div>
@@ -211,7 +527,7 @@
 
           </ul>
 
-          <a href="./Apply.html" class="btn btn-primary"> Apply Now </a>
+          <a href="./Apply.html#Apply" class="btn btn-primary"> Apply Now </a>
 
         </div>
       </section>
