--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -56,15 +56,15 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link> Home </a>
+            <a href="./index.html#home" class="navbar-link" data-nav-link> Home </a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link> About Us </a>
+            <a href="./index.html#about" class="navbar-link" data-nav-link> About Us </a>
           </li>
 
           <li>
-            <a href="#features" class="navbar-link" data-nav-link> Features </a>
+            <a href="./index.html#features" class="navbar-link" data-nav-link> Features </a>
           </li>
 
           <li>
@@ -72,11 +72,11 @@
           </li>
 
           <li>
-            <a href="#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
+            <a href="./index.html#scholarships" class="navbar-link" data-nav-link> Scholarships </a>
           </li>
 
           <li>
-            <a href="#faq" class="navbar-link" data-nav-link> FAQ </a>
+            <a href="./index.html#faq" class="navbar-link" data-nav-link> FAQ </a>
           </li>
 
           <li>
@@ -84,7 +84,7 @@
           </li>
 
           <li>
-            <a href="./Apply.html" class="navbar-link" data-nav-link> Apply Now </a>
+            <a href="./Apply.html#Apply" class="navbar-link" data-nav-link> Apply Now </a>
           </li>
 
         </ul>
@@ -146,50 +146,6 @@
       </section>
 
 
-      <!-- 
-        - #ABOUT
-      -->
-      <section class="section about" id="about" aria-label="about">
-        <div class="container">
-
-          <figure class="about-banner">
-            <img src="./assets/images/about-banner.png" width="802" height="654" loading="lazy" alt="about banner"
-              class="w-100">
-          </figure>
-
-          <div class="about-content">
-
-            <h2 class="h2-sm section-title"> About Us </h2>
-
-            <p class="section-text">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto velit numquam similique pariatur voluptate
-              magnam voluptates in nisi, ad eum ipsam quisquam cumque ex corrupti rerum accusamus facilis voluptas voluptatum maxime.
-              A sapiente ipsa deleniti non laudantium? Voluptate, dolores sequi!
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Cum nostrum molestiae maiores fugiat aut accusamus nisi ipsam nulla aspernatur quidem.
-            </p>
-
-            <ul class="about-list">
-
-              <li class="has-before">
-                Work Hours (Available date/time Mon - Fri 09:00hrs - 16:00hrs, Sat 09:00hrs - 13:00hrs, Sun Closed)
-              </li>
-
-              <li class="has-before">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum?
-              </li>
-
-              <li class="has-before">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, earum?
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-      </section>
-
     </article>
   </main>
 
@@ -205,7 +161,7 @@
 
         <div class="footer-brand">
 
-          <a href="#home" class="logo"> Wensi Recruitment Agency </a>
+          <a href="./index.html" class="logo"> Wensi Recruitment Agency </a>
 
           <p class="footer-text">
             Wensi Recruitment Agency is your reliable partner in accessing global education and scholarships.
