--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
           <h2 class="h2 section-title text-center"> Courses </h2>
 
           <p class="section-text text-center">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus deserunt distinctio corporis adipisci nihil in facere libero eum quidem magnam!
+            Take a look at a few Courses Listed
           </p>
 
           <ul class="grid-list">
@@ -400,18 +400,21 @@
             <li>
               <div class="service-card has-after">
 
-                <figure class="card-icon">
-                  <img src="./assets/images/service-1.png" width="140" height="140" loading="lazy"
-                    alt="" class="img">
-                </figure>
-
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Lorem ipsum dolor sit amet consectetur.</h3>
+                  <h3 class="h3 card-title"> PHARMACEUTICAL & ALLIED MEDICAL SCIENCES </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
+                    -> B.Pharmacy
+                    <br>
+                    <br>
+                    -> Bachelor in Public Health (BPH)
+                    <br>
+                    <br>
+                    -> Bachelor in Hospital Administration (BHA)
+                    <br>
+                    <br>
+                    -> M.Pharm (Pharmaceutics/ Pharmacology/ Pharmaceutical Analysis)
                   </p>
 
                 </div>
@@ -422,18 +425,21 @@
             <li>
               <div class="service-card has-after">
 
-                <figure class="card-icon">
-                  <img src="./assets/images/service-2.png" width="140" height="140" loading="lazy" alt=""
-                    class="img">
-                </figure>
-
                 <div class="card-content">
 
-                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
+                  <h3 class="h3 card-title"> EDUCATION, PHYSICAL EDUCATION & SPORTS SCIENCE </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
+                    -> Bachelor of Arts BA (Hons): Sociology, Psychology, English, Political Science, Economics
+                    <br>
+                    <br>
+                    -> Bachelors in Journalism & Mass Communication
+                    <br>
+                    <br>
+                    -> B.Sc (Hons) Economics
+                    <br>
+                    <br>
+                    -> MA in Public Administration
                   </p>
 
                 </div>
@@ -444,18 +450,21 @@
             <li>
               <div class="service-card has-after">
 
-                <figure class="card-icon">
-                  <img src="./assets/images/service-3.png" width="140" height="140" loading="lazy"
-                    alt="" class="img">
-                </figure>
-
                 <div class="card-content">
 
-                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
+                  <h3 class="h3 card-title"> COMPUTER APPLICATIONS & INFORMATION TECHNOLOGY </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
+                    -> B.Sc. Computer Science
+                    <br>
+                    <br>
+                    -> Bachelore in Computer Application (BCA)
+                    <br>
+                    <br>
+                    -> BCA (Hons.): Cyber and Forensics and Artificial Intelligence & Data Science
+                    <br>
+                    <br>
+                    -> BCA (Hons.) Cyber Security (Lateral Entry)
                   </p>
 
                 </div>
@@ -466,62 +475,21 @@
             <li>
               <div class="service-card has-after">
 
-                <figure class="card-icon">
-                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
-                    class="img">
-                </figure>
-
                 <div class="card-content">
 
-                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
+                  <h3 class="h3 card-title"> ENGINEERING & TECHNOLOGY </h3>
 
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
-                  </p>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="service-card has-after">
-
-                <figure class="card-icon">
-                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
-                    class="img">
-                </figure>
-
-                <div class="card-content">
-
-                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
-
-                  <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
-                  </p>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="service-card has-after">
-
-                <figure class="card-icon">
-                  <img src="./assets/images/service-4.png" width="140" height="140" loading="lazy" alt=""
-                    class="img">
-                </figure>
-
-                <div class="card-content">
-
-                  <h3 class="h3 card-title"> Lorem ipsum dolor sit amet consectetur. </h3>
-
-                  <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adi piscing semper turpis. Nullam eget luctlie gula and
-                    adipiscing elit.
+                    -> B. Tech - Computer Science Engineering: Cyber & Forensics and Artifical Intelligence with Data Sciences
+                    <br>
+                    <br>
+                    -> B. Tech - Civil Engineering
+                    <br>
+                    <br>
+                    -> B.Tech - Electronics & Communication Engineering
+                    <br>
+                    <br>
+                    -> B.Tech - Auto Mobile Specialization in Electronic Vehicle
                   </p>
 
                 </div>
@@ -536,6 +504,7 @@
         </div>
       </section>
 
+      
       <!-- 
         - #Scholarships
       -->
