--- a/index.html
+++ b/index.html
@@ -654,6 +654,77 @@
         </div>
       </section>
 
+
+      <!-- 
+        - #PAYMENY DETAILS
+      -->
+      <section class="section service" id="scholarships" aria-label="scholarships">
+        <div class="container">
+
+          <p class="section-subtitle text-center">- Lorem ipsum dolor sit amet. -</p>
+
+          <h2 class="h2 section-title text-center"> Payment Details </h2>
+
+          <p class="section-text text-center">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          </p>
+
+          <ul class="grid-list">
+
+            <li>
+              <div class="service-card has-after">
+
+                <figure class="card-icon">
+                  <img src="./assets/images/china-scholarship.png" width="140" height="140" loading="lazy"
+                    alt="china-scholarship.png" class="img">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> Stanbic Bank - Zambia </h3>
+
+                  <p class="card-text">
+                    Account No: 9130003152964
+                    <br>
+                    Branch: Lusaka Main Branch
+                    <br>
+                    Sort Code: 040002
+                    <br>
+                    Swift Code: SBICZMLX
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card has-after">
+
+                <figure class="card-icon">
+                  <img src="./assets/images/india-scholarship.png" width="140" height="140" loading="lazy" alt="india-scholarship.png"
+                    class="img">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title"> Airtel Mobile Money </h3>
+
+                  <p class="card-text">
+                    Name:
+                    <br>
+                    Contact: 0777829720
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+          </ul>
+
+        </div>
+      </section>
+
       <!-- 
         - #FAQ
       -->
