--- a/index.html
+++ b/index.html
@@ -665,17 +665,13 @@
 
           <h2 class="h2 section-title text-center"> Payment Details </h2>
 
-          <p class="section-text text-center">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          </p>
-
           <ul class="grid-list">
 
             <li>
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/china-scholarship.png" width="140" height="140" loading="lazy"
+                  <img src="./assets/images/payment-stanbic-bank.png" width="140" height="140" loading="lazy"
                     alt="china-scholarship.png" class="img">
                 </figure>
 
@@ -702,13 +698,13 @@
               <div class="service-card has-after">
 
                 <figure class="card-icon">
-                  <img src="./assets/images/india-scholarship.png" width="140" height="140" loading="lazy" alt="india-scholarship.png"
+                  <img src="./assets/images/payment-airtel-money.png" width="140" height="140" loading="lazy" alt="india-scholarship.png"
                     class="img">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title"> Airtel Mobile Money </h3>
+                  <h3 class="h3 card-title"> Airtel Money </h3>
 
                   <p class="card-text">
                     Name:
