--- a/Apply.html
+++ b/Apply.html
@@ -131,7 +131,7 @@
 
       <section id="Apply">
         <div class="container-b">
-          <form action="" method="POST">
+          <form action="" method="POST" action="https://checkout.flutterwave.com/v3/hosted/pay">
               <div class="wrapper">
       
                   <div class="title">
